# llm_adapter_claw

./: .gitignore  DEPLOYMENT.md  Dockerfile  LOCAL_TESTING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
doc/: analysis_report.md  lightweight_optimization_design.md  risk_analysis.md
scripts/: dev.sh  start.sh
src/llm_adapter_claw/: __init__.py  __main__.py  config.py  config_api.py  config_reload.py  main.py
src/llm_adapter_claw/core/: __init__.py  assembler.py  assembly_config.py  circuit_breaker.py  classifier.py  degradation.py  pipeline.py  proxy_client.py  sanitizer.py  sliding_window.py  validator.py
src/llm_adapter_claw/memory/: __init__.py  embedder.py  retriever.py  store.py
src/llm_adapter_claw/metrics/: __init__.py  traffic_analyzer.py
src/llm_adapter_claw/models/: __init__.py
src/llm_adapter_claw/providers/: __init__.py  registry.py
src/llm_adapter_claw/utils/: __init__.py  logger.py  token_counter.py
tests/: __init__.py  test_health.py
