[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_adapter_claw"
version = "0.1.0"
description = "LLM Adapter for Claw - AI Context Firewall with token optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "llm_adapter_claw team"},
]
keywords = ["llm", "proxy", "context-optimization", "token-saving", "claw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
# Memory features require heavy dependencies
memory = [
    "numpy>=1.26.0",
    "sqlite-vss>=0.1.2",
    "sentence-transformers>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
llm-adapter-claw = "llm_adapter_claw.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_adapter_claw"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/llm_adapter_claw --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/llm_adapter_claw"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
